# app-task

./: Cargo.toml  README.md
examples/: default.rs
src/: backoff_strategy.rs  lib.rs
src/backoff_strategy/: constant_time.rs  threshold_buckets.rs
