[package]
name = "app-task"
version = "0.3.0"
edition = "2021"
description = "A simple tokio task manager"
license = "MIT"

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["rt", "time"] }
tracing = "0.1"

[dev-dependencies]
eyre = "0.6"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
